--- a/src/frontend/packages/cf-autoscaler/src/shared/list-types/app-autoscaler-metric-chart/app-autoscaler-metric-chart-card/combo-chart/combo-chart.component.scss
+++ b/src/frontend/packages/cf-autoscaler/src/shared/list-types/app-autoscaler-metric-chart/app-autoscaler-metric-chart-card/combo-chart/combo-chart.component.scss
@@ -83,17 +83,3 @@
     }
   }
 }
-
-ngx-charts-legend {
-  display: inline-block;
-  margin-left: 1.75em;
-  margin-top: 1em;
-  position: absolute;
-  right: 3em;
-  .legend-wrap {
-    width: unset;
-    .legend-labels {
-      width: unset;
-    }
-  }
-}
